--- a/public/styles.css
+++ b/public/styles.css
@@ -50,13 +50,13 @@ header nav{
 header nav ul{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    margin: 0;
-    padding: 10px;
+    margin-left: 15px;
+    padding: 10px 10px 10px 80px;
     list-style: none;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 20px;
 }
 
 header nav ul li {
@@ -67,7 +67,7 @@ header nav ul li a{
     color: white;
     text-decoration: none;
     font-weight: 600;
-    font-size: clamp(12px, 2.5vw, 16px);
+    font-size: clamp(14px, 2.5vw, 18px);
     letter-spacing: 1px;
     text-transform: uppercase;
     padding: 10px 15px;
